Fix where fixed nav bar would jump when it scrolls down

--- a/app/assets/stylesheets/components/_main_nav.scss
+++ b/app/assets/stylesheets/components/_main_nav.scss
@@ -281,6 +281,10 @@
   height: 50px;
 }
 
+.add-nav-height {
+  height: 102px;
+}
+
 @media screen and (max-width: 692px) {
   .bottom-bar {
     // display: none;
